--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,10 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+obj/Karaoke.csproj.nuget.cache
+obj/Karaoke.csproj.nuget.cache
+obj/Debug/netcoreapp2.2/Karaoke.Views.dll
+obj/Debug/netcoreapp2.2/Karaoke.assets.cache
+obj/Karaoke.csproj.nuget.cache
+obj/Karaoke.csproj.nuget.g.props
+obj/Karaoke.csproj.nuget.g.targets
