--- a/.gitignore
+++ b/.gitignore
@@ -359,3 +359,7 @@ obj/Karaoke.csproj.nuget.cache
 obj/Karaoke.csproj.nuget.g.props
 obj/Karaoke.csproj.nuget.g.targets
 obj/Debug/netcoreapp2.2/Karaoke.Views.dll
+obj/Debug/netcoreapp2.2/Karaoke.Views.dll
+obj/Debug/netcoreapp2.2/Karaoke.assets.cache
+obj/Karaoke.csproj.nuget.cache
+obj/Karaoke.csproj.nuget.g.props
