add ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ obj/Karaoke.csproj.nuget.g.props
 obj/Debug/netcoreapp2.2/Karaoke.assets.cache
 obj/Debug/netcoreapp2.2/Karaoke.Views.dll
 obj/Debug/netcoreapp2.2/Karaoke.Views.dll
+obj/Debug/netcoreapp2.2/project.razor.json
+obj/Debug/netcoreapp2.2/Karaoke.assets.cache
