add skip functionality

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ obj/Debug/netcoreapp2.2/Karaoke.Views.dll
 obj/Debug/netcoreapp2.2/Karaoke.Views.dll
 obj/Debug/netcoreapp2.2/project.razor.json
 obj/Debug/netcoreapp2.2/Karaoke.assets.cache
+obj/Debug/netcoreapp2.2/Karaoke.Views.dll
