--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,9 +2,7 @@
   "API-Key": "AIzaSyBEPcHqL4xl5efNPPJqDOYR3_TkZ1ejTls",
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
   }
 }
