--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "KaraokeDbContext": "Server=tcp:youtube-karaoke.database.windows.net,1433;Initial Catalog=yt-karaoke;Persist Security Info=False;User ID=ytk-admin;Password=YToke2021;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+  }
 }
